# join_to_it_test

./: .gitignore  README.md  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: tests.yml
src/: config.py  connection_manager.py  main.py  schemas.py  signal_handler.py  utils.py
src/routers/: rest.py  websocket.py
tests/: conftest.py  test_connection_manager.py  test_graceful_shutdown.py  test_websocket_routes.py
tests/helpers/: fake_websocket.py
