[project]
name = "jointoit-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Volodymyr Klimchuk", email = "ke1wi.ua@gmail.com" }
]
dependencies = [
    "fastapi[standard]>=0.123.3",
    "loguru>=0.7.3",
    "uvicorn[standard]>=0.38.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.14.7",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jointoit_test"]
